# air_quality_wearable

./: .gitignore  ble_bme690_node.brd  ble_bme690_node.sch  ble_bme690_node_1.kicad_sch  ble_bme690_node_2.kicad_sch  ble_bme690_node_top_bom.csv  ble_bme690_node_top_bom.xlsx  ble_bme690_node_top_cpl.csv
GHTC/RP2350/: #auto_saved_files#  RP2350.kicad_prl  RP2350.kicad_pro  RP2350.kicad_sch  RP2350.kicad_sch-bak
KiCAD_converted/: KiCAD_converted-eagle-import.kicad_sym  KiCAD_converted.kicad_prl  KiCAD_converted.kicad_pro  KiCAD_converted.kicad_sch  _autosave-KiCAD_converted.kicad_pcb  sym-lib-table
asthma_guardian_ml/: covert_to_tflite.py  model.tflite  model_params.h  scaler.pkl  sensor_log_all_three.csv  train_model.py  xgboost_model.pkl
firmware/air-quality-evaluation/: CMakeLists.txt
firmware/air-quality-evaluation/main/: CMakeLists.txt  air_quality.c  air_quality.h
firmware/air-quality-evaluation/main/bme690/: bme69x.c  bme69x.h  bme69x_defs.h  bsec_datatypes.h  bsec_iaq.c  bsec_integration.c  bsec_integration.h  bsec_selectivity.c  bsec_selectivity.h  i2c_interface.c  i2c_interface.h
firmware/datalogger/data_logger/: CMakeLists.txt  partitions.csv  project_structure.txt
firmware/datalogger/data_logger/.claude/: settings.local.json
firmware/datalogger/data_logger/components/bme68x_bsec/: CMakeLists.txt
firmware/datalogger/data_logger/components/bme68x_bsec/include/: bsec_datatypes.h  bsec_iaq.config  bsec_iaq.h  bsec_integration.h  bsec_interface.h
firmware/datalogger/data_logger/components/bme68x_bsec/src/: bsec_iaq.c  bsec_integration.c  bsec_selectivity.c
firmware/datalogger/data_logger/components/zmod4510_idf/: CMakeLists.txt
firmware/datalogger/data_logger/components/zmod4510_idf/include/: hal.h  hs3xxx.h  hs4xxx.h  hsxxxx.h  zmod4510_config_no2_o3.h  zmod4xxx.h  zmod4xxx_hal.h
firmware/datalogger/data_logger/components/zmod4510_idf/src/: hal.c  hal_esp32.c  hs4xxx.c  zmod4510_config.c  zmod4xxx.c  zmod4xxx_hal.c
firmware/datalogger/data_logger/main/: CMakeLists.txt  bme690_reader.c  bme690_reader.h  convert_model_to_array.py  http_server.c  http_server.h  i2c_scanner.c  i2c_scanner.h  logger_task.c  logger_task.h  main.c  ml_inference.cpp  ml_inference.h  model_data.h  sensor_task.c  sensor_task.h  sensor_test.c  sensor_test.h  serial_handler.c  serial_handler.h  wifi_init.c  wifi_init.h
firmware/zmod4510-evaluation/: CMakeLists.txt
firmware/zmod4510-evaluation/main/zmod4510/: example.c
firmware/zmod4510-evaluation/main/zmod4510/algos/: no2_o3.h  zmod4510_config_no2_o3.h  zmod4xxx_cleaning.h
firmware/zmod4510-evaluation/main/zmod4510/hal/: hal.c  zmod4xxx_hal.c  zmod4xxx_hal.h
firmware/zmod4510-evaluation/main/zmod4510/sensors/: hs3xxx.c  hs3xxx.h  hs4xxx.h  hsxxxx.c  hsxxxx.h  zmod4xxx_types.h
(+8 files in other folders)
